Frontend/src/components/game/game-board/clickModal/ClickModalList.module.css
.modal__list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  position: fixed;
  cursor: default;
  width: 200px;
  background-color: rgba(255, 255, 255, 0.85);
  border: 0.5rem double var(--color-red);
  border-radius: 1rem;
  corner-shape: superellipse(0);
  padding: 0.75rem;
  box-shadow: 0px 0px 15px rgba(198, 40, 40, 0.5);
  z-index: 1000;
  ::before {
    position: absolute;
    content: "";
    top: -24px;
    left: -21.5px;
    width: 10px;
    height: 10px;
    border: 2px solid black;
    background-color: lime;
    border-radius: 50%;
  }
  button {
    background-color: transparent;
    border: 4px double var(--color-red);
    corner-shape: superellipse(0);
    border-radius: 0.3rem;
    padding: 0.1rem 0.35rem;
    color: black;
  }
}

.character__listElement {
  display: flex;
  width: 150px;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  padding: 0.5rem 0rem;
  border: 4px double transparent;
  corner-shape: superellipse(0);
  border-radius: 0.3rem;
  gap: 1rem;
  img {
    width: 50px;
    height: 50px;
    object-fit: cover;
    object-position: top;
  }
}
.character__listElement:hover {
  border: 4px double var(--color-red);
  corner-shape: superellipse(0);
  border-radius: 0.3rem;
}

